# deities

./: .gitignore  .tags_sorted_by_file  Cargo.toml  Deities.sublime-project
.cargo/: config
Services/: Redis.ini
src/: common.rs  init_fields.rs  lib.rs  main.rs  mortal.rs  perun.rs  service.rs  svarog.rs  veles.rs
