[package]
name = "deities"
authors = ["Daniel (dmilith) Dettlaff <dmilith@me.com>"]
description = "Deities are three Slavic gods - Perun (supervisor), Veles (service spawner), Svarog (low level smith)"
version = "0.6.6"
edition = "2021"

[dependencies]
tracing = { version = "0.1.32", features = ["log", "attributes", "std"] }
tracing-subscriber = { version = "0.3.9", features = ["registry", "fmt", "env-filter"] }

toml = "0.5.8"
glob = "0.3.0"
colored = "2.0.0"
time = "0.3.6"
libc = "0.2.113"
uuid = { version = "0.8.2", features = ["v4"] }
curl = "0.4.42"
slack-hook = "0.8.0"
chrono = "0.4.19"
hostname = "0.1"
uname = "0.1.1"
users = "0.11.0"
fs2 = "0.4.3"
regex = "1.5.4"
lazy_static = "1.4.0"
serde = "1.0.135"
serde_derive = "1.0.135"
mimalloc = "0.1.28"
